--- a/management/ProR_FormalMind/literature.bib
+++ b/management/ProR_FormalMind/literature.bib
@@ -71,3 +71,11 @@
   note       = {\url{http://www.stups.uni-duesseldorf.de/w/Special:Publication/topcase-JaGr2011}}
 }
 
+@Misc{essentials_diff,
+  title={{Comparing ReqIF Files with ProR Essentials Diff}},
+  howpublished={http://www.formalmind.com/de/blog/comparing-reqif-files-pror-essentials-diff},
+  author = {{Michael Jastram}},
+  year = {{2013}}
+}
+
+
