Finalizing ProR Report

--- a/management/ProR_FormalMind/literature.bib
+++ b/management/ProR_FormalMind/literature.bib
@@ -78,4 +78,19 @@
   year = {{2013}}
 }
 
+@TechReport{D2.6-9,
+	title = {{D2.6-9: Requirements for openETCS}},
+	author = {Sylvain Baro and Jan Welte},
+	institution = {openETCS},
+	note = {{\url{https://github.com/openETCS/requirements/blob/master/D2.6-9/D2_6-9.pdf?raw=true}}}
+}
+@Misc{subset026-6,
+  title={{Model Evalution Wiki: Secondary Tools for Data, Function and Requirements Management}},
+  howpublished={\url{https://github.com/openETCS/model-evaluation/wiki/Secondary-tools-for-data,-function-and-requirement-management}}
+}
+@Misc{integrate-models,
+  title={{Using RMF to integrate your models}},
+  author={Michael Jastram},
+  howpublished={\url{http://www.formalmind.com/en/blog/using-rmf-integrate-your-models}}
+}
 
