Finishing ProR Report

--- a/management/ProR_FormalMind/literature.bib
+++ b/management/ProR_FormalMind/literature.bib
@@ -1,6 +1,6 @@
 @inbook{RMF_Mark_Book_Jastram_2013,
   title      = {{Managing Requirements Knowledge}},
-  chapter    = {{Chapter 16: The Eclipse Requirements Modeling Framework}},
+  chapter    = {{16: The Eclipse Requirements Modeling Framework}},
   author     = {Michael Jastram},
   editor     = {Maalej, Walid and Thurimella, Anil},
   publisher  = {Springer},
@@ -73,7 +73,7 @@
 
 @Misc{essentials_diff,
   title={{Comparing ReqIF Files with ProR Essentials Diff}},
-  howpublished={http://www.formalmind.com/de/blog/comparing-reqif-files-pror-essentials-diff},
+  howpublished={\url{http://www.formalmind.com/de/blog/comparing-reqif-files-pror-essentials-diff}},
   author = {{Michael Jastram}},
   year = {{2013}}
 }
